# GameEngineArchitecture

./: CMakeLists.txt  README.md  configure.sh  run.sh
assets/Map/: map.txt
assets/Scripts/: paddleMovement.lua
include/: isDefined.h  print.h
src/: Pong.cpp  Pong.h  game.cpp  main.cpp
src/Arcane/: Arcane.cpp  Arcane.h  System.cpp  System.h
src/ECS/: Componets.h  Entity.h  System.h
src/Game/: Game.h  ScriptingManager.cpp  game.cpp
src/Game/Graphics/: PixelShader.cpp  PixelShader.h  Texture.h  TextureManager.cpp  TextureManager.h  Tile.h
src/Pong/: Components.h  Pong.cpp  Pong.h  System.cpp  System.h
src/Scene/: Scene.cpp  Scene.h
